reference/4.0/Microsoft.PowerShell.Security/Microsoft.PowerShell.Security.md
---
ms.date:  06/09/2017
schema:  2.0.0
locale:  en-us
keywords:  powershell,cmdlet
Help Version:  4.0.4.2
Download Help Link:  http://go.microsoft.com/fwlink/?linkid=285757
Module Guid:  a94c8c7e-9810-47c0-b8af-65089c13a35a
title:  Microsoft.PowerShell.Security
Module Name:  Microsoft.PowerShell.Security
---
# Microsoft.PowerShell.Security Module

## Description

This section contains the help topics for the cmdlets that are installed with PowerShell
Microsoft.PowerShell.Security module. The Security module contains cmdlets and providers that manage
the basic security features of Windows.

## Microsoft.PowerShell.Security Cmdlets

### [about_Certificate_Provider](About/about_Certificate_Provider.md)

Provides access to X.509 certificate stores and certificates in PowerShell.

### [ConvertFrom-SecureString](ConvertFrom-SecureString.md)

Converts a secure string to an encrypted standard string.

### [ConvertTo-SecureString](ConvertTo-SecureString.md)

Converts encrypted standard strings to secure strings.

### [Get-Acl](Get-Acl.md)

Gets the security descriptor for a resource, such as a file or registry key.

### [Get-AuthenticodeSignature](Get-AuthenticodeSignature.md)

Gets information about the Authenticode signature for a file.

### [Get-CmsMessage](Get-CmsMessage.md)

Gets content that has been encrypted by using the Cryptographic Message Syntax format.

### [Get-Credential](Get-Credential.md)

Gets a credential object based on a user name and password.

### [Get-ExecutionPolicy](Get-ExecutionPolicy.md)

Gets the execution policies for the current session.

### [Get-PfxCertificate](Get-PfxCertificate.md)

Gets information about .pfx certificate files on the computer.

### [Protect-CmsMessage](Protect-CmsMessage.md)

Encrypts content by using the Cryptographic Message Syntax format.

### [Set-Acl](Set-Acl.md)

Changes the security descriptor of a specified item, such as a file or a registry key.

### [Set-AuthenticodeSignature](Set-AuthenticodeSignature.md)

Adds an Authenticode signature to a PowerShell script or other file.

### [Set-ExecutionPolicy](Set-ExecutionPolicy.md)

Changes the user preference for the PowerShell execution policy.

### [Unprotect-CmsMessage](Unprotect-CmsMessage.md)

Decrypts content that has been encrypted by using the Cryptographic Message Syntax format.